add of criteria